--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "playsound3>=3.2.2",
+    "pyinstaller>=6.12.0",
     "setuptools>=77.0.3",
     "wheel>=0.45.1",
 ]
